<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ads_vendor</name>
  <version>0.0.0</version>
  <description>Package vendoring Beckhoff/ADS library</description>
  <maintainer email="nikola.banovic@b-robotized.com">nibanovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
