<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ads_vendor</name>
  <version>1.0.1</version>
  <description>Package vendoring Beckhoff/ADS library</description>
  <author email="nikola.banovic@b-robotized.com">Nikola Banovic </author>
  <maintainer email="nikola.banovic@b-robotized.com">Nikola Banovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>git</buildtool_depend> <!-- declared for RPM package -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
